--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -99,7 +99,7 @@ Animations
   transform: scale(1);
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
   .burger {
      display: none;
   }
