--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -49,7 +49,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   #navbar {
      display: none;
   }
