--- a/app/assets/stylesheets/components/_page1.scss
+++ b/app/assets/stylesheets/components/_page1.scss
@@ -73,7 +73,7 @@ padding: 50px;
   }
 
   .slide__desc {
-    padding: 130px;
+    padding: 110px;
     font-size: 20px;
     line-height: 20px;
     display: flex;
